# metatron

./: .gitignore  Cargo.toml  README.md
crates/libs/metatron/: CLA  Cargo.toml
crates/libs/metatron-cli/: Cargo.toml
crates/libs/metatron/src/: error.rs  lib.rs
crates/libs/metatron/tests/: test_metatron-core.rs
crates/services/metatron-server/: Cargo.toml
crates/services/metatron-server/src/: lib.rs  main.rs
crates/services/metatron-server/tests/: test_metatron-server.rs
data/: report-data.json  report-template.kdl  report-template.yaml  report.html
src/: lib.rs  main.rs  utils.rs
