[package]
name = "metatron"
version = "0.0.1"
edition = "2021"

authors = ["Evgeny Igumnov <igumnovnsk@gmail.com>"]
repository = "https://github.com/igumnoff/metatron"
documentation = "https://docs.rs/metatron"
license-file = "LICENSE"
keywords = []
categories = []
readme = "README.md"
description = "Metatron library"




[dependencies]
anyhow = "1.0.75"
thiserror = "1.0.44"
shiva = "0.1.10"
serde_yaml = "0.9.34"
serde_json = "1.0.115"
bytes = "1.5.0"

[dev-dependencies]
env_logger = "0.10.0"
