[package]
name = "metatron"
version = "0.3.0"
edition = "2021"

authors = ["Evgeny Igumnov <igumnovnsk@gmail.com>"]
repository = "https://github.com/igumnoff/metatron"
documentation = "https://docs.rs/metatron"
license-file = "LICENSE"
keywords = ["report-generation", "data-reporting",  "text-report", "pdf", "template-engine"]
categories = ["text-processing", "web-programming"]
readme = "README.md"
description = "Metatron library"




[dependencies]
anyhow = "1.0.75"
thiserror = "1.0.44"
#shiva = {path = "../shiva/lib"}
shiva = "0.3.2"
kdl = "4.6.0"
serde_json = "1.0.115"
bytes = { version = "1.5.0", features = ["serde"] }
axum = "0.7.5"
serde = { version = "1.0.198", features = ["derive"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread"]}
tracing-subscriber = "0.3.18"
tokio-util = { version = "0.7.10", features = ["io"] }
http = "1.1.0"
mime = "0.3.17"

[dev-dependencies]
env_logger = "0.10.0"
