[workspace]

resolver = "2"

members = [
	"crates/libs/metatron",
	"crates/libs/metatron-cli",
	"crates/services/metatron-server",
]

[workspace.dependencies]
tokio = { version = "1.37.0" }
tokio-util = { version = "0.7.10" }
axum = "0.7.5"
#shiva = {path = "../shiva/lib"}
shiva = "1.1.1"
metatron = { path = "crates/libs/metatron" }
kdl = "4.6.0"
serde = { version = "1.0.198" }
serde_json = "1.0.115"
mime = "0.3.17"
bytes = { version = "1.5.0" }
thiserror = "1.0.44"
tracing = "0.1"
tracing-subscriber = "0.3.18"
clap = { version = "4.5.3" }
axum-test = "15.3.0"
anyhow = "1.0.75"
http = "1.1.0"
